[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "fisseqtools"
version = "0.1.0"
license = {text = "Apache 2.0"}
authors = [
    {name = "Gwenneth Straub", email = "gwenneth.straub@gmail.com"},
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

requires-python = ">=3.8"

dependencies = [
    "fire",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit_learn",
    "scipy",
    "tqdm",
    "xgboost",
    "pyarrow",
    "shap",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
]

[project.scripts]
fisseq-graph = "fisseqtools.graph:main"
fisseq-ovwt = "fisseqtools.ovwt:main"

[tool.setuptools]
packages = ["fisseqtools"]
